# anomaly-map-app

./: .gitignore  README.md  app.py  pyproject.toml
static/: index.html
