[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anomaly-map-app"
version = "0.1.0"
authors = [
    { name = "Samantha Biegel", email = "samantha.biegel@ai.ethz.ch" },
]
description = "Interactive web app for visualising Switzerland-wide forest browning anomaly maps."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio",
    "fastapi",
    "geopandas ~= 1.1",
    "matplotlib ~= 3.10",
    "numpy ~= 1.26",
    "pandas ~= 2.2",
    "Pillow",
    "rasterio ~= 1.4",
    "uvicorn[standard]",
    "zarr ~= 3.0.8",
]

[tool.setuptools]
py-modules = ["app"]
